# App

./: .env  .gitignore  README.md  docker-compose.yaml
AdminPanel/: Dockerfile  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
AdminPanel/messages/: en.json  ru.json
AdminPanel/src/app/: globals.css
AdminPanel/src/app/[locale]/: layout.tsx
AdminPanel/src/app/[locale]/dashboard/: page.tsx
AdminPanel/src/app/[locale]/newadm/: page.tsx
AdminPanel/src/app/[locale]/signin/: page.tsx
AdminPanel/src/app/api/: def.yaml  ingest.py
AdminPanel/src/app/api/auth/[...nextauth]/: route.ts
AdminPanel/src/app/api/charts/[chatId]/: route.ts
AdminPanel/src/app/api/chats/: route.ts
AdminPanel/src/app/api/chats/[id]/: route.ts
AdminPanel/src/app/api/chats/datasources/: route.ts
AdminPanel/src/app/api/chats/messages/[chat_id]/: route.ts
AdminPanel/src/app/api/chats/new_message/: route.ts
AdminPanel/src/app/api/chats/stream_messages/: route.ts
AdminPanel/src/app/api/cloud-config/google-drive/: route.ts
AdminPanel/src/app/api/cloud-config/yandex-disk/: route.ts
AdminPanel/src/app/api/logs/: route.ts
AdminPanel/src/app/api/logs/stream/: log-service.ts  route.ts
AdminPanel/src/app/api/logs/submit/: route.ts
AdminPanel/src/app/api/services/generate_table/: route.ts
AdminPanel/src/app/api/setting/: route.ts
AdminPanel/src/app/api/setting/[id]/: route.ts
AdminPanel/src/app/api/settings/: route.ts
AdminPanel/src/app/api/settings/[id]/chats/: route.ts
AdminPanel/src/app/api/settings/dashboard_chat/: route.ts
AdminPanel/src/app/api/settings/llm_endpoint/: route.ts
AdminPanel/src/app/api/settings/llms/: route.ts
AdminPanel/src/app/api/settings/vlms/: route.ts
AdminPanel/src/app/api/settings/whatsapp_qr/: route.ts
AdminPanel/src/app/api/tables/[chatId]/: route.ts
AdminPanel/src/app/api/templates/: route.ts
AdminPanel/src/app/api/users/: route.ts
AdminPanel/src/app/api/users/[id]/: route.ts
AdminPanel/src/app/api/users/auth/: route.ts
AdminPanel/src/app/components/: ChatPanel.tsx  DashboardPanel.tsx  LocaleSwitcher.tsx  LogPanel.tsx  ModelsPanel.tsx  ProfilePanel.tsx  ReportsPanel.tsx  SettingsPanel.tsx  TemplatesPanel.tsx  UsersPanel.tsx
AdminPanel/src/app/types/: settings.ts
AdminPanel/src/auth/: config.ts  index.ts
AdminPanel/src/util/: mongodb.ts
AdminPanel/src/utils/: sse.ts
classification-service/: .env  Dockerfile  main.py  pyproject.toml  request_tester.py
data-presentation/: .env  Dockerfile  chart_generators.py  generators.py  main.py  mock_server.py  models.py  pyproject.toml  table_generators.py
data-presentation/src/: chart_generators.py  models.py  table_generators.py
data-service/: .env  create_admin.py  main.py  pyproject.toml
file-service/: .env  Dockerfile  credentials.json.example  main.py  pyproject.toml  start.sh
file-service/app/config/: google_drive_credentials.json
file-service/scripts/: save.py
file-service/src/: auxiliary.py  config.py  init_db.py  newsletter.py  save_report.py  schemas.py  session.py  settings.py
file-service/src/auxiliary/: cron.py  locks.py  logging.py  testing.py
file-service/src/generating_reports/: helper.py
file-service/src/generating_reports/systems/: filesystem.py  google_drive.py  google_drive_credentials.json  yandex_disk.py
file-service/src/routers/: cloud_config.py  management.py  message_pending.py  message_report.py  messages_pending.py  messages_report.py  report.py  reports.py  settings.py
file-service/src/schemas/: database.py  message_pending.py  message_report.py  setting.py
file-service/src/schemas/endpoints/: message_pending.py  message_report.py  report.py  setting.py
file-service/src/schemas/other/: config.py  images.py  logging.py  sending.py
message-processing-service/: .env  Dockerfile  agent.py  curl.txt  data_lists.py  default_table_definition.json  failed_list.json  llm.py  main.py  online_log.py  prompt.txt  prompt2.txt  prompts.csv  pyproject.toml  scenario.py  scenario_csv.py  settings.py  split_prompt.txt  test_request.py
message-processing-service/src/: agent.py  bert.py  llm.py  online_log.py  scenario.py  settings.py  test.py  test_request.py  util.py  whisper.py
messenger-api-service/: Dockerfile  README.md  main.py  pyproject.toml  start.sh
messenger-api-service/data/: telegram_api.db
messenger-api-service/src/: config.py  init_db.py  session.py  whisper.py
messenger-api-service/src/routers/: association.py  chat.py  llm_processing.py  message_sending.py
messenger-api-service/src/schemas/: database.py  llm_processing.py
messenger-api-service/src/schemas/endpoints/: association.py  chat.py  llm_processing.py  message.py
telegram-bot-service/: Dockerfile  main.py  pyproject.toml  run_with_reload.py  user_phone_numbers.db
telegram-bot-service/src/: auxiliary.py  bot_instance.py  config.py  database.py  handlers.py  message_router.py  schemas.py
telegram-service/: .env  README.md  auxiliary.py  config.py  main.py  schemas.py
telegram-service/src/: auxiliary.py  config.py  handlers.py  schemas.py
whatsapp-service/: .gitignore  Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  whatsapp.js
