[project]
name = "classification-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "onnxruntime>=1.21.0",
    "onnxruntime-gpu>=1.21.0",
    "poethepoet>=0.33.1",
    "pydantic>=2.11.3",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.51.2",
    "uvicorn>=0.34.0",
]
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
[tool.poe.tasks]
start = "python -m main"
test = "python -m request_tester"
