[project]
name = "data-presentation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.16",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "poethepoet>=0.33.1",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
]
[tool.poe.tasks]
start = "python -m main"
mock = "python -m mock_server"
