[project]
name = "data-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi>=0.115.12",
    "jsonrpcserver>=5.0.9",
    "poethepoet>=0.33.1",
    "pymongo>=4.11.3",
    "starlette>=0.46.1",
    "uvicorn>=0.34.0",
]

[tool.poe.tasks]
start = "python -m main"
