[project]
name = "file-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.16",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "google>=3.0.0",
    "google-api-python-client>=2.102.0",
    "google-auth>=2.22.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "poethepoet>=0.33.1",
    "python-crontab>=3.2.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.0",
    "yadisk>=3.2.0",
]

[tool.poe.tasks]
start = "python -m uvicorn main:app --host 0.0.0.0 --port 52001"
