[project]
name = "telegram-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.16",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "poethepoet>=0.33.1",
    "python-telegram-bot[job-queue]>=22.0",
    "uvicorn>=0.34.0",
    "watchdog>=6.0.0",
]

[tool.poe.tasks]
start = "python -m main"
start_with_reload = "python -m run_with_reload"
